# Darwin

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Darwin  Makefile  README.md  build.fish  cmake_install.cmake  tags
.ccls-cache/@@home@n3rdy@dev@cpp@Darwin/: @usr@include@SDL2@SDL.h.blob  @usr@include@SDL2@SDL_assert.h.blob  @usr@include@SDL2@SDL_atomic.h.blob  @usr@include@SDL2@SDL_audio.h.blob  @usr@include@SDL2@SDL_blendmode.h.blob  @usr@include@SDL2@SDL_clipboard.h.blob  @usr@include@SDL2@SDL_config.h.blob  @usr@include@SDL2@SDL_cpuinfo.h.blob  @usr@include@SDL2@SDL_endian.h.blob  @usr@include@SDL2@SDL_error.h.blob  @usr@include@SDL2@SDL_events.h.blob  @usr@include@SDL2@SDL_filesystem.h.blob  @usr@include@SDL2@SDL_gamecontroller.h.blob  @usr@include@SDL2@SDL_gesture.h.blob  @usr@include@SDL2@SDL_haptic.h.blob  @usr@include@SDL2@SDL_hints.h.blob  @usr@include@SDL2@SDL_image.h.blob  @usr@include@SDL2@SDL_joystick.h.blob  @usr@include@SDL2@SDL_keyboard.h.blob  @usr@include@SDL2@SDL_keycode.h.blob  @usr@include@SDL2@SDL_loadso.h.blob  @usr@include@SDL2@SDL_locale.h.blob  @usr@include@SDL2@SDL_log.h.blob  @usr@include@SDL2@SDL_main.h.blob  @usr@include@SDL2@SDL_messagebox.h.blob  (+331 more)
Darwin/: deb.h  main.cpp  sfml-app  window_manager.h
Deb/: README.md  deb.cpp  deb.h
Debug/: CMakeCache.txt  Darwin  Makefile  cmake_install.cmake  compile_commands.json
NeuralNetwork/: connector.h  neural_network.cpp  neural_network.h  neural_network.hpp  node.cpp  node.h  plan.html  plan.html~  plan.md
src/: UnivParent.cpp  UnivParent.h  constants.h  main.cpp
(+24 files in other folders)
